# space_invaders

./: .gitignore  .rustfmt.toml  Cargo.toml  build.rs  start_code.bat
.cargo/: config
src/: buffer.rs  commands.rs  hmi.rs  image.rs  lib.rs  main.rs  math.rs  render.frag  render.vert  render_gl.rs  sys.rs  types.rs  vertex_output.rs
src/hmi/: base.rs  buffer.rs  button.rs  commands.rs  cursor.rs  freetype2.rs  image.rs  input.rs  panel.rs  progress.rs  rendered_glyphs_store.rs  scrollbar.rs  style.rs  text.rs  text_engine.rs  ui_context.rs  ui_context.rs.orig  vertex_output.rs  window.rs  window.rs.orig
src/math/: color_conversion.rs  colors.rs  minmax.rs  rectangle.rs  rgb.rs  utility.rs  vec2.rs  vec3.rs  vertex_types.rs
src/sys/: memory_mapped_file.rs  unique_resource.rs
