[package]
    name = "simple_ui"
    version = "0.1.0"
    authors = ["Adrian Hodos <adi.hodos@gmail.com>"]
    edition = "2018"
#    links = "freetype"
    build = "build.rs"

[dependencies]
    num = "0.2"
    num-traits = "0.2"
    num-derive = "0.2"
    glfw = "0.29"
    gl = "0.10.0"
    libc = "0.2"
    png = "0.14.1"
    freetype-sys = "0.7.1"
    enumflags2 = "^0.5"
    enumflags2_derive = "^0.5"

[target.'cfg(windows)'.dependencies]
    winapi = { version = "0.3", features = ["winuser", "windef", "libloaderapi", "windowsx", "winbase", "memoryapi", "fileapi", "handleapi"] }

[build-dependencies]
    cmake = "0.1"    